# luban-hello-world-py

./: .gitignore  Procfile  README.md  main.py  pyproject.toml  version.py
.trae/documents/: Implement Generic Entrypoint and Procfile.md  Restructure App to Standard src Layout.md
src/luban_hello_world_py/: main.py  version.py
